@@ -3,7 +3,7 @@
 0.1 Copyright
 =============
 
-This package is Copyright 2001-2006 by Wilson Snyder
+This package is Copyright 2001-2007 by Wilson Snyder
 <wsnyder@wsnyder.org>.
 
    This program is free software; you can redistribute it and/or modify
@@ -54,8 +54,9 @@ and such that do not want to exit on the first error.
 0.5 Obtaining Distribution
 ==========================
 
-The latest version is available at `http://www.perl.org/CPAN/', and
-from `http://www.veripool.com/'.
+Log-Detect is part of the L<http://www.veripool.com/> free EDA software
+tool suite.  The latest version is available from
+`http://www.perl.org/CPAN/', and from `http://www.veripool.com/'.
 
    Download the latest package from that site, and decompress.  `gunzip
 Log-Detect_version.tar.gz ; tar xvf Log-Detect_version.tar'
